Change log 1.4 (under development)
----------------------------------
* Added testng to full release project
* Fixed so that classloader executor supports runnable's
* DeepCloner now supports reference cloning

Change log 1.3.5 (2009-12-13)
-----------------------------
* Removed EasyMock maven dependencies from the JUnit legacy runner since they're not needed.
* Fixed a bug in WhiteboxImpl#findUniqueConstructorOrThrowException which caused an additional constructor to be found when a class was prepared for test (issue 189).
* Fixed the maven assembly so that it now produces two full jar files, one for Mockito and one for EasyMock. These contains the sources as well.
* Mockito extension API now supports Mockito 1.8.1 & 1.8.2.
* java.lang.Object#getClass is no longer mockable by default. The reason is that it may lead to an unexpected method invocation exception using EasyMock in some equal implementations. It's possible to override this behavior.
* DeepCloner should now support cloning of static final fields on SUN JVM.
* Fixed a minor bug in Whitebox#getInternalState so that a better error message is given when the instance argument is null (issue 205).
* Fixed some typos in the javadoc of PowerMockito#verifyNew (issue 187).
* Fixed so that Whitebox#getInternalState(..) now supports passing in super types as field-type critiera (issue 210).
* Fixed so that Whitebox#getInternalState(..) and Whitebox#setInternalState(..) doesn't cause NPE when too many fields matched the criteria (issue 211).
* Basic support for TestNG (5.11) implemented.
* Fixed so that Whitebox#invokeMethod now works for overridden methods.
* Implemented findResource in classloader, this means that you should be able to locate resources in classpath (issue 143).